--- a/index.html
+++ b/index.html
@@ -40,9 +40,16 @@
         <section class="in2">
             <div class="ine4">
                 <h1 class="t9">Наши услуги</h1>
-                <p class="t10">Мы предлагаем услуги по установке видеонаблюдения для бизнеса и частных лиц. Наша команда профессионалов обеспечит надежную защиту вашего имущества с помощью современных технологий.</p>
-                <a class="btn2" href></a>
-
+                <div class="ine5">
+                    <div class="ine6">
+                        <h2 class="t10">Автоматические ворота</h2>
+                    </div>
+                    <div class="ine7">
+                        <h2 class="t12">Установка шлагбаумов</h2>
+                    </div>
+                    <div class="ine8">
+                        <h2 class="t14">Пожарная сигнализация</h2>
+                    </div>
         </section>
         
     </main>
