--- a/index.html
+++ b/index.html
@@ -40,18 +40,34 @@
         <section class="in2">
             <div class="ine4">
                 <h1 class="t9">Наши услуги</h1>
+                <div class="line10"></div>
                 <div class="ine5">
                     <div class="ine6">
                         <h2 class="t10">Автоматические ворота</h2>
                     </div>
                     <div class="ine7">
-                        <h2 class="t12">Установка шлагбаумов</h2>
+                        <h2 class="t11">Установка шлагбаумов</h2>
                     </div>
                     <div class="ine8">
-                        <h2 class="t14">Пожарная сигнализация</h2>
+                        <h2 class="t12">Пожарная сигнализация</h2>
                     </div>
         </section>
-        
+        <section class="in3">
+            <div class="ine9">
+                <h1 class="t13">Почему именно мы должны устанавливать видеонаблюдение?</h1>
+                <div class="line11"></div>
+                <div class="ine9"></div>
+                <h1 class="t14">Постоянное обслуживание</h1>
+                <h1 class="t15">Берем проекты на регулярное сопровождение, мониторим и следим за работой систем видеонаблюдения в Астане</h1>
+                <div class="ine10"></div>
+                <h1 class="t16">Грамотный монтаж видеокамер</h1>
+                <h1 class="t17">Монтаж видеонаблюдения в Астане на объектах повышенной сложности в любых климатических и погодных условиях. </h1>
+                <div class="ine11"></div>
+                <h1 class="t18">Все официально</h1>                
+                <h1 class="t19">Заключаем договор,  предоставляем полный пакет закрывающих документов для бухгалтерии. </h1>
+            </div>
+
+        </section>
     </main>
 </body>
 </html>
