--- a/index.html
+++ b/index.html
@@ -52,22 +52,44 @@
                         <h2 class="t12">Пожарная сигнализация</h2>
                     </div>
         </section>
-        <section class="in3">
-            <div class="ine9">
-                <h1 class="t13">Почему именно мы должны устанавливать видеонаблюдение?</h1>
-                <div class="line11"></div>
-                <div class="ine9"></div>
-                <h1 class="t14">Постоянное обслуживание</h1>
-                <h1 class="t15">Берем проекты на регулярное сопровождение, мониторим и следим за работой систем видеонаблюдения в Астане</h1>
-                <div class="ine10"></div>
-                <h1 class="t16">Грамотный монтаж видеокамер</h1>
-                <h1 class="t17">Монтаж видеонаблюдения в Астане на объектах повышенной сложности в любых климатических и погодных условиях. </h1>
-                <div class="ine11"></div>
-                <h1 class="t18">Все официально</h1>                
-                <h1 class="t19">Заключаем договор,  предоставляем полный пакет закрывающих документов для бухгалтерии. </h1>
+        <!DOCTYPE html>
+        <html lang="ru">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Установка видеонаблюдения</title>
+            <link rel="stylesheet" href="style.css">
+        </head>
+        <body>
+            <div class="container">
+                <h1>Почему именно мы должны устанавливать видеонаблюдение?</h1>
+                <div class="features-row">
+                    <div class="feature">
+                        <div class="icon wrench"></div>
+                        <div class="text">
+                            <h2>Постоянное обслуживание</h2>
+                            <p>Берем проекты на регулярное сопровождение, мониторим и следим за работой систем видеонаблюдения в Астане</p>
+                        </div>
+                    </div>
+                    <div class="feature">
+                        <div class="icon camera"></div>
+                        <div class="text">
+                            <h2>Грамотный монтаж видеокамер</h2>
+                            <p>Монтаж видеонаблюдения в Астане на объектах повышенной сложности в любых климатических и погодных условиях.</p>
+                        </div>
+                    </div>
+                    <div class="feature">
+                        <div class="icon doc"></div>
+                        <div class="text">
+                            <h2>Все официально</h2>
+                            <p>Заключаем договор, предоставляем полный пакет закрывающих документов для бухгалтерии.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-        </section>
+        </body>
+        </html>
+        
     </main>
 </body>
 </html>
