--- a/index.html
+++ b/index.html
@@ -61,35 +61,87 @@
             <link rel="stylesheet" href="style.css">
         </head>
         <body>
-            <div class="container">
+            <section class="container">
                 <h1>Почему именно мы должны устанавливать видеонаблюдение?</h1>
+                <div class="line11"></div>
                 <div class="features-row">
                     <div class="feature">
-                        <div class="icon wrench"></div>
+                        <div class="icon-wrench"></div>
                         <div class="text">
                             <h2>Постоянное обслуживание</h2>
                             <p>Берем проекты на регулярное сопровождение, мониторим и следим за работой систем видеонаблюдения в Астане</p>
                         </div>
                     </div>
                     <div class="feature">
-                        <div class="icon camera"></div>
+                        <div class="icon-camera"></div>
                         <div class="text">
                             <h2>Грамотный монтаж видеокамер</h2>
                             <p>Монтаж видеонаблюдения в Астане на объектах повышенной сложности в любых климатических и погодных условиях.</p>
                         </div>
                     </div>
                     <div class="feature">
-                        <div class="icon doc"></div>
+                        <div class="icon-doc"></div>
                         <div class="text">
                             <h2>Все официально</h2>
                             <p>Заключаем договор, предоставляем полный пакет закрывающих документов для бухгалтерии.</p>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
+            <section class="container2">
+                <h1 class="context1">Типы решения</h1>
+                <div class="line12"></div>
+                <div class="concon1">
+                <div class="con1"></div>
+                <div class="con2"></div>
+                <div class="con3"></div>
+                <div class="con4"></div>
+                </div>
+            </section>
         </body>
         </html>
-        
+        <section class="info-section">
+            <div class="info-content">
+                <div class="text-block">
+                    <h1>Установка камер<br>видеонаблюдения в Астане</h1>
+                    <hr class="underline">
+                    <p><strong>Инженерно-монтажная компания Suplex более 10 лет работает на рынке установке систем видеонаблюдения в Астане (Нур-Султане).</strong></p>
+                    <p>За то время, мы заработали репутацию надёжной компании, которой вы можете доверить любые вопросы безопасности. Мы не только занимаемся монтажом объектов видеонаблюдения, но и продажей видеокамер, кабелей, регистраторов и жёстких дисков.</p>
+                    <p>На сегодняшний день, системы видеонаблюдения можно установить практически на любой объект — кафе, офисы, ломбарды и т.д. Наличие камер позволяет выявить кражи и играет превентивную роль.</p>
+                    <p>Зная о видеонаблюдении, злоумышленники дважды подумают, прежде чем совершить противоправное действие.</p>
+                </div>
+                <div class="image-block1">
+                </div>
+            </div>
+        </section>
+        <div class="img393"></div>
+        <section class="info-section1">
+            <div class="info-content1"> 
+                <div class="image-block2">
+                </div>
+                <div class="text-block1">
+                    <h1>Непревзойденное качество<br>и сервис</h1>
+                    <hr class="underline1">
+                    <p class="text1">Современные видеокамеры позволяют также получать удаленный доступ к камерам. Благодаря специализированному программному обеспечению, вы сможете наблюдать за объектом 24/7 в режиме реального времени с помощью специального мобильного приложения. Мы полностью настроим и покажем как пользоваться приложением, а также подключим его к управлению вашими камерами.                     </p>
+                    <p>Также, запись наблюдения может храниться не только на жестком диске, но и в облаке. Благодаря чему, можно всего удобно и быстро скачать записи с камер наблюдения за предыдущий день. Заказывая установку видеонаблюдения в Астане (Нурсултане) от инженерной компании Suplex, вы получаете непревзойденное качество и сервис, который позволить полностью решить вопрос безопасности.</p>
+
+                </div> 
+            </div>
+        </section>
+        <section class="partners-section">
+            <h2>Наши партнёры</h2>
+            <div class="underline"></div>
+            <div class="partners-grid">
+                <div class="partner1"></div>
+                <div class="partner2"></div>
+                <div class="partner3"></div>
+                <div class="partner4"></div>
+                <div class="partner5"></div>
+                <div class="partner6"></div>
+                <div class="partner7"></div>
+                <div class="partner8"></div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
