--- a/index.html
+++ b/index.html
@@ -213,7 +213,46 @@
       </p>
     </div>
   </section>
-
+  <footer class="footer">
+    <div class="footer-top">
+      <div class="footer-block">
+        <img src="https://suplex.kz/images/logo-1.svg" alt="Suplex.kz" class="" />
+        <p>Компания Suplex – это команда профессиональных специалистов с бэкграундом в самых разных отраслях инженерных работ.</p>
+        <p class="social">Мы в соц. сетях: 
+          <a href="#"><img src="image/ggg.png.png" alt="Facebook" class="F" /></a>
+          <a href="#"><img src="image/icons8-instagram-50.png" alt="Instagram" class="I" /></a>
+        </p>
+      </div>
+      <div class="footer-block">
+        <h4>Навигация</h4>
+        <ul>
+          <li><a href="#">О компании</a></li>
+          <li><a href="#">Услуги</a></li>
+          <li><a href="#">Проекты</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+      <div class="footer-block">
+        <h4>Услуги</h4>
+        <ul>
+          <li><a href="#">Установка шлагбаумов</a></li>
+          <li><a href="#">Установка автоматических ворот</a></li>
+          <li><a href="#">Установка КПП</a></li>
+          <li><a href="#">Установка турникетов</a></li>
+        </ul>
+      </div>
+      <div class="footer-block">
+        <h4>Контакты</h4>
+        <p><strong>+7 (702) 555 8570</strong></p>
+        <p>Нур-Султан, ул. Бурабай 46</p>
+        <p><a href="mailto:lesnar@suplex.kz">lesnar@suplex.kz</a></p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>© Разработано в ABC DESIGN — создание сайтов в Астане</p>
+    </div>
+  </footer>
+  
     </main>
 </body>
 </html>
