--- a/index.html
+++ b/index.html
@@ -7,35 +7,36 @@
     <link rel="stylesheet" href="gtrr.css">
 </head>
 <body>
-   <header>
-        <section class="head">
-            <div class="head1">
-                <div class="logo">
-                    <img class="img1" src="https://suplex.kz/images/logo-1.svg" alt="Logo" >
-                </div>
-                 <div class="menu">
-                 <a class="t1" href="#">О компании</a>
-                 <a class="t2" href="#">Услуги</a>
-                 <a class="t3" href="#">Проекты</a>
-                 <a class="t4" href="#">Контакты</a>
-                 <img class="img2" src="https://img.icons8.com/?size=100&id=14181&format=png&color=000000" alt="Logo" >
-                 <a class="t5" href="tel:+77025858770">+7 (702) 585 8770</a>
-                 </div>
-            </div>
-        </section>
-    </header> 
+  <header class="header">
+    <div class="logo">
+      <img src="https://suplex.kz/images/logo-1.svg" alt="SUPLEX.KZ" />
+    </div>
+    <nav class="nav">
+      <a href="#">О КОМПАНИИ</a>
+      <a href="#">УСЛУГИ</a>
+      <a href="#">ПРОЕКТЫ</a>
+      <a href="#">КОНТАКТЫ</a>
+      <a href="tel:+77025558570" class="phone">+7 (702) 555 8570</a>
+      <div class="social">
+        <a href="#"><img src="https://img.icons8.com/ios-filled/50/instagram-new.png" alt="Instagram" /></a>
+        <a href="#"><img src="https://img.icons8.com/ios-filled/50/facebook-new.png" alt="Facebook" /></a>
+      </div>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div class="hero-left">
+      <img class="immg1" src="image/myimage1.png.png" alt="Камера видеонаблюдения" />
+    </div>
+    <div class="hero-right">
+      <p class="location">АСТАНА (НУР-СУЛТАН)</p>
+      <h1>Установка видеонаблюдения | под ключ</h1>
+      <p class="sub">Будьте уверены в безопасности вашего дома и бизнеса</p>
+      <a class="cta-button" href="#">Узнать стоимость</a>
+    </div>
+  </section>
     <main>
-        <section class="in1">
-            <div class="ine1">
-                <div class="ine2">
-                    <p class="t6">Главная / Услуги</p>
-                    <h1 class="t7">Установка видеонаблюдения <span>под ключ</span></h1>
-                    <p class="t8">Комплексные решения для вашего бизнеса и дома</p>
-                    <a class="btn" href="#">Заказать установку</a>
-                </div>
-                <div class="ine3">
-                </div>
-            </div>
+
         </section>
         <section class="in2">
             <div class="ine4">
@@ -54,6 +55,7 @@
         </section>
 
             <section class="container">
+              <div class="container1">
                 <h1>Почему именно мы должны устанавливать видеонаблюдение?</h1>
                 <div class="line11"></div>
                 <div class="features-row">
@@ -79,8 +81,10 @@
                         </div>
                     </div>
                 </div>
+              </div>
             </section>
             <section class="container2">
+              <div class="contain3">
                 <h1 class="context1">Типы решения</h1>
                 <div class="line12"></div>
                 <div class="concon1">
@@ -88,10 +92,9 @@
                 <div class="con2"></div>
                 <div class="con3"></div>
                 <div class="con4"></div>
-                </div>
+                </div></div>
             </section>
-        </body>
-        </html>
+
         <section class="info-section">
             <div class="info-content">
                 <div class="text-block">
@@ -106,7 +109,9 @@
                 </div>
             </div>
         </section>
+        <section class="img3931">
         <div class="img393"></div>
+        </section>
         <section class="info-section1">
             <div class="info-content1"> 
                 <div class="image-block2">
@@ -121,8 +126,8 @@
             </div>
         </section>
         <section class="partners-section">
-            <h2>Наши партнёры</h2>
-            <div class="underline"></div>
+            <h2 class="our">Наши партнёры</h2>
+            <div class="underline4"></div>
             <div class="partners-grid">
                 <div class="partner1"><img src="image/myimage16.png.png" alt="Партнёр 1"></div>
                 <div class="partner2"><img src="image/myimage17.png.png" alt="Партнёр 2"></div>
@@ -178,11 +183,10 @@
               </blockquote>
             </div>
           </section>
-          <!DOCTYPE html>
-<html lang="ru">
+ 
 
   <section class="quote-section">
-    <div class="overlay">
+    <div class="overlay5">
       <div class="quote-content">
         <h1>Получите расчет сметы по вашему объекту</h1>
         <p>Оставьте заявку на бесплатную консультацию и наши менеджеры свяжутся с Вами в ближайшее время</p>
