--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                 </div> 
             </div>
         </section>
-        <section class="partners-section">
+        <div class="img3932">
+                  <section class="partners-section444">
             <h2 class="our">Наши партнёры</h2>
             <div class="underline4"></div>
             <div class="partners-grid">
@@ -139,6 +140,8 @@
                 <div class="partner8"><img src="image/myimage23.png.png" alt="Партнёр 8"></div>
             </div>
         </section>
+        </div>
+
         <section class="reviews-section">
             <h2>Что о нас говорят?</h2>
             <div class="underline"></div>
@@ -183,21 +186,23 @@
               </blockquote>
             </div>
           </section>
- 
+ <div class="quote-section222">
+            <section class="quote-section22">
+            <div class="overlay50">
+              <div class="quote-content22">
+                <h1>Получите расчет сметы по вашему объекту</h1>
+                <p>Оставьте заявку на бесплатную консультацию и наши менеджеры свяжутся с Вами в ближайшее время</p>
+                <form class="quote-form">
+                  <input type="text" placeholder="Ваше имя" required />
+                  <input type="tel" placeholder="Ваш телефон" required />
+                  <button type="submit">Отправить</button>
+                </form>
+              </div>
+            </div>
+          </section>
+          
+ </div>
 
-  <section class="quote-section">
-    <div class="overlay5">
-      <div class="quote-content">
-        <h1>Получите расчет сметы по вашему объекту</h1>
-        <p>Оставьте заявку на бесплатную консультацию и наши менеджеры свяжутся с Вами в ближайшее время</p>
-        <form class="quote-form">
-          <input type="text" placeholder="Ваше имя" required />
-          <input type="tel" placeholder="Ваш телефон" required />
-          <button type="submit">Отправить</button>
-        </form>
-      </div>
-    </div>
-  </section>
   <section class="installation-section">
     <div class="installation-content">
       <h3>Монтаж и обслуживание видеонаблюдения в Астане</h3>
